Remove min height on menu and add min width for header to avoid overlap

--- a/docs/www/style.css
+++ b/docs/www/style.css
@@ -51,6 +51,7 @@ hr.divider {
 	display: flex;
 	align-items: center;
 	width: 100%;
+	min-width: 50rem;
 }
 
 .header-logo {
